Email sending done, started newPassword
Email template for verifying email is done, started doing newPassword like verify email.

--- a/services/templates/verifyUser/html.ejs
+++ b/services/templates/verifyUser/html.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     @media only screen and (max-width: 620px) {
       table[class=body] h1 {
@@ -84,13 +85,13 @@
     }
     </style>
   </head>
-  <body class="" style="background-color: #f6f6f6; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
-    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color: #f6f6f6;">
+  <body class="" style="color: white; background-color: white; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 10 15; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
+    <table border="0" cellpadding="0" cellspacing="0" class="body" style="padding: 20px 20px; border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color: #222222;">
       <tr>
         <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">&nbsp;</td>
-        <td class="container" style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 580px; padding: 10px; width: 580px;">
+        <td class="container" style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 580px; padding: 40px; width: 580px;">
           <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
-            <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
+            <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #222222; border-radius: 3px;">
 
               <!-- START MAIN CONTENT AREA -->
               <tr>
@@ -98,8 +99,8 @@
                   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                     <tr>
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Kedves <%= username %>,</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Sikeresen rögzítettük regisztrációdat. Azonban még két lépés választ el a játék használatától. Elsősorban megkell erősítened e-mail címed, majd ha adminjaink is jóváhagyták regisztrációd e-mailben értesítünk róla. Ez után tudod igénybe venni a weboldalt.</p>
+                        <p style="font-family: sans-serif; font-size: 34px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Kedves <b><%= username %></b>,</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Sikeresen rögzítettük regisztrációdat. Elsősorban megkell erősítened e-mail címed, majd ha adminjaink is jóváhagyták regisztrációd e-mailben értesítünk róla. Ez után tudod igénybe venni a weboldalt és felcsatlakozni a szerverre.</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                           <tbody>
                             <tr>
@@ -107,7 +108,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;"> <a href="http://htmlemail.io" target="_blank" style="display: inline-block; color: #ffffff; background-color: #3498db; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;">Call To Action</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #375A7F; border-radius: 5px; text-align: center;"> <a href=<%= verify.root %>/user/verifyEmail?username=<%= username %>&email=<%= verify.email %>&key=<%= verify.key %> target="_blank" style="display: inline-block; color: #ffffff; background-color: #222222; border: solid 1px #375A7F; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #375A7F;">E-mail megerősítése</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -115,8 +116,8 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">This is a really simple email template. Its sole purpose is to get the recipient to click the button with no distractions.</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Good luck! Hope it works.</p>
+                        <p style="text-align: center; font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-top: 30px; Margin-bottom: 15px;">Nem te regisztráltál az oldalunkra?</p>
+                        <p style="text-align: center; font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Vedd fel a kapcsolatot a ModMiners Vezetőséggel.</p>
                       </td>
                     </tr>
                   </table>
@@ -131,13 +132,11 @@
               <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">Company Inc, 3 Abbey Road, San Francisco CA 94102</span>
-                    <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Unsubscribe</a>.
-                  </td>
-                </tr>
-                <tr>
-                  <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                    Powered by <a href="http://htmlemail.io" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">HTMLemail</a>.
+                    <span class="apple-link" style="color: #999999; font-size: 14px; text-align: center;">ModMiners Vezetőség</span>
+                    <hr>
+                    <a href=<%= verify.root %> style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Facebook</a> | 
+                    <a href="https://www.facebook.com/ModMiners/" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Facebook</a> | 
+                    <a href="https://www.youtube.com/channel/UCX43XL9Zc-uonD69D4RFiDQ" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">YouTube</a>
                   </td>
                 </tr>
               </table>
