Changed trademarks and discord link

--- a/services/templates/newPassword/html.ejs
+++ b/services/templates/newPassword/html.ejs
@@ -811,7 +811,7 @@
                                                                                               <tr>
                                                                                                   <td align="center" valign="top" class="es-p40r" esd-tmp-icon-type="facebook"><a target="_blank" href=<%= verify.root %>><img title="Weboldal" src="https://hhpuml.stripocdn.email/content/guids/CABINET_393da93581f35b84c120f42bd7d9b9ee/images/88851590781934179.png" alt="web" width="32"></a></td>
                                                                                                   <td align="center" valign="top" class="es-p40r" esd-tmp-icon-type="twitter"><a target="_blank" href="https://www.facebook.com/ModMiners/"><img title="Facebook" src="https://hhpuml.stripocdn.email/content/guids/CABINET_393da93581f35b84c120f42bd7d9b9ee/images/99541590781955343.png" alt="fb" width="32"></a></td>
-                                                                                                  <td align="center" valign="top" class="es-p40r" esd-tmp-icon-type="instagram"><a target="_blank" href="https://dc.modminers.hu"><img title="Discord" src="https://hhpuml.stripocdn.email/content/guids/CABINET_393da93581f35b84c120f42bd7d9b9ee/images/35981590781996130.png" alt="dc" width="32"></a></td>
+                                                                                                  <td align="center" valign="top" class="es-p40r" esd-tmp-icon-type="instagram"><a target="_blank" href="http://dc.modminers.hu"><img title="Discord" src="https://hhpuml.stripocdn.email/content/guids/CABINET_393da93581f35b84c120f42bd7d9b9ee/images/35981590781996130.png" alt="dc" width="32"></a></td>
                                                                                                   <td align="center" valign="top" esd-tmp-icon-type="youtube"><a target="_blank" href="https://www.youtube.com/channel/UCX43XL9Zc-uonD69D4RFiDQ"><img title="Youtube" src="https://hhpuml.stripocdn.email/content/guids/CABINET_393da93581f35b84c120f42bd7d9b9ee/images/71551590781859517.png" alt="Yt" width="32"></a></td>
                                                                                               </tr>
                                                                                           </tbody>
@@ -820,7 +820,7 @@
                                                                               </tr>
                                                                               <tr>
                                                                                   <td class="esd-block-text es-p10t es-p10b" align="center">
-                                                                                      <p>© 2017-2020 ModMiners</p>
+                                                                                      <p>© 2017-2021 ModMiners</p>
                                                                                   </td>
                                                                               </tr>
                                                                           </tbody>
