Fixed link in the emails

--- a/services/templates/newPassword/html.ejs
+++ b/services/templates/newPassword/html.ejs
@@ -758,7 +758,7 @@
                                                                                   </td>
                                                                               </tr>
                                                                               <tr>
-                                                                                  <td align="center" class="esd-block-button es-p10t es-p10b es-p10r es-p10l"><span class="es-button-border" style="background: #375a7f; border-width: 0px; display: block; border-radius: 0px;"><a href=<%= verify.root %>/user/newPassword?username=<%= username %>&email=<%= verify.email %>&key=<%= verify.key %> class="es-button" target="_blank" style="background: #375a7f; border-color: #375a7f; border-width: 10px 30px; display: block; border-radius: 0px; font-size: 20px;">Új jelszó</a></span></td>
+                                                                                  <td align="center" class="esd-block-button es-p10t es-p10b es-p10r es-p10l"><span class="es-button-border" style="background: #375a7f; border-width: 0px; display: block; border-radius: 0px;"><a href=<%= verify.root %>#/user/newPassword?username=<%= username %>&email=<%= verify.email %>&key=<%= verify.key %> class="es-button" target="_blank" style="background: #375a7f; border-color: #375a7f; border-width: 10px 30px; display: block; border-radius: 0px; font-size: 20px;">Új jelszó</a></span></td>
                                                                               </tr>
                                                                               <tr>
                                                                                   <td class="esd-block-text" align="center">
